接着做上海

--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1374,6 +1374,7 @@
  HNN_liu_bocheng_eco_desc:0 "§Y生于：§!§L1892年12月4日；大清帝国、四川省开县§!\n§Y派系：§!§a红军§!\n§Y背景：§!§L在父亲去世后，由于家境贫寒，刘伯承从十几岁起就在农场里干活。1912年，他考入蜀军将校学堂，毕业后为熊克武效力。1913年，刘伯承在二次革命中跟随熊克武反对北京当局。然而，袁世凯最终获胜，刘伯承被迫流亡上海。在那里，他加入了孙中山领导的中华革命党，该党为国民党的前身。\n\n1915年，蔡锷举义反对袁世凯的复辟阴谋，刘伯承奉命返回四川组织护国军。在1916年的战斗中，刘伯承两度头部中弹，导致右眼失明。1924年，刘伯承率部与吴佩孚的直军作战，于龙泉驿一战取得大胜。也正是在1924年，刘伯承开始受到马克思主义和国民革命的影响。1926年，刘伯承正式加入国民党。\n\n虽然刘伯承在武汉战役期间举兵支持广州国民党政府，有力阻止了四川军阀出兵支援吴佩孚。但国民党不仅未能夺取武汉，反而彻底崩溃了。刘伯承突然与盟友失去了联系，导致其他四川军阀联手将刘伯承赶出了四川，随后刘伯承在四川边界游击作战，并在随后加入到张国焘、邓小平领导的川北根据地。1936年，根据地被失陷后，刘、邓、张等人抵达湖南重新加入革命。§!"
  HNN_ma_long:0 "马龙"
  HNN_ma_long_cnav:0 "马龙"
+ HNN_liu_chang_yi:0 "刘昌毅"
 
  CHI_su_yu: "粟裕"
  HNN_su_yu_cos: "粟裕"
