--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -1773,9 +1773,6 @@
  legcities.63.d:0 "在我们努力恢复上海街头稳定的同时，市民们也无不在担忧这座城市飘忽不定的未来。虽然徒有自治之表象日后怕是只会适得其反，但要求重设文官政府之呼声依旧是不绝于耳。这样的话，在一众不是罪囚就是军阀的合作者中，受过日本教育的大学教授、财政专家苏锡文显得格外突出。苏锡文好释道相合之“大道”，主张天下一家、万法归一。同其他合作者一样，苏锡文也是上海黑社会的常客，手下养着一批扒手和毒贩，还有着一贯道等宗教势力的支持。苏锡文承诺，上台后全力铲除城内的抵抗势力，并启动公共工程建设，为市民办实事。虽然许多人并不信苏锡文口中的这一套，但还是同意在我们的盟国能够再度整合上海市之前，暂由其进行管理。"
  legcities.63.a:0 "组建“大道”政府"
  legcities.63.b:0 "什么鬼东西，滚边去"
- legcities.99.t:0 "鸦片女王"
- legcities.99.d:0 "“一个年轻的妓女流落街头，在这个残酷的世界上苦苦挣扎，对身边生活不幸的人漠不关心”，这可能是对年轻时的江青最好的描述。然而现在的她却穿着奢侈的皮大衣，享受着上海上流人士才能体验的最优质美甲服务。这个罪恶之城的女王，充分的证明了只要你足够的坚定和残忍，你就无所不能…… ，资本主义成功的鲜活证据。而这一切都需要数以千计的贫苦农民迷上了衰败军阀们走私的毒品。\n\n在三合会的管控下，该地区鸦片交易几乎已经被垄断，取而代之的是大量的现金和尸体。而这一切都和江有着密不可分的关系。江青从夜女郎到东方的毒品皇后，的确是一个女强人的故事。\n\n上海导演费穆即将拍摄的电影《鸦片女王》的剧本的介绍……"
- legcities.99.a:0 "哈人！"
  LEC_more_evidence_yuesheng:0 "这将为我们提供更多关于杜月笙的证据"
  LEC_less_evidence_yuesheng:0 "这将消除一些我们关于杜月笙的证据"
  LEC_more_evidence_xiaolin:0 "这将为我们提供更多关于张啸林的证据"
@@ -2155,22 +2152,13 @@
  LEC_police_force_desc:0 "现在，警察部门得到了额外的资金拨款，如此他们便可以招募更多的本地人加入其中，并且许多外国人也慕名来到了使馆城市，报名参加警察部队。"
  LEC_jap_kmt_help_tt:0 "§L支那本部§!会协助我们调查§R国民党§!，但不保证能成功。"
  LEC_du_kmt_help_tt:0 "§Y杜月笙§!会协助我们调查§R国民党§!，但他也希望我们能做出让步。"
- legcities.103.t:0 "三合会的红夫人"
- legcities.103.d:0 "在江青从三合会高层的黄金王座之上崛起成为东亚毒品交易女王之前，她出身贫寒，是一介木匠和他的次妾所生的女儿，打出生起就和母亲一起过着当牛做马的生活。江青的母亲原籍山东，为了逃避暴力成性的父亲，江青的母亲带着她跑到了华东地区找寻工作，母亲当着佣人和妓女，而年幼的江青则随便找了份在天津烟草厂当童工的工作。等到江青费尽千辛万苦终于能够勉强糊口，她仍是个在社会上饱受歧视的王八蛋，但她却在上海、北京、青岛和济南求学期间，学习起了艺术和人文知识，并最终涉足革命领域。她的天赋为她赢得了第一份正面的关注和尊重，同时也将她推向了通往上流社会和上海最黑暗的街头的岔路口。得益于她与余启威等中国新锐革命家和唐纳等后起之秀导演的关系，江青得以继续在红黑两道起舞，一只脚站在中国与日俱增的繁荣和与之相伴的犯罪底层，另一只脚则牢牢扎根于中国日益积蓄力量的革命领域。这支颇为累人却又卓有成效的舞蹈，江青一直坚持跳到了今天，以钢铁般的意志指挥着越来越多的中国人，哪怕她已经有了“团结”的三合会做靠山。\n\n然而，随着广袤无垠的中原大地逐渐被她收入囊中，过去与她纠缠的左派势力为她日益壮大、捉襟见肘的犯罪帝国提供着服务，他们的影响也越来越大。这些革命者伸出了援助之手，希望能够换取江青治下的些许自治权和保护，我们的夫人现在必须做出决定，她是应该再次屈服于旧日交情，以换了一副面孔的腐败社会主义为温床，建立一个横跨全中国的妥协性犯罪帝国、 还是应该坚持自己的立场和新生活，彻底放弃这些革命关系和随之而来的盟友，以求建立一个完全忠于自己而非任何意识形态的不容妥协之犯罪王国？"
- legcities.103.a:0 "夫人早就把这些愚蠢的想法抛诸脑后了"
- legcities.103.b:0 "口头应付左派，同时维持家长制的门面"
- legcities.103.c:0 "操纵中国马克思主义的赤潮"
- legcities.103.e:0 "腐化各辛迪加及中国工会主义"
- legcities.103.f:0 "吸纳激进无政府主义和罪犯无政府主义暗流"
 
 ###修改原事件
  legcities.101.t:0 "伟大王朝的复辟"
- legcities.101.d:0 "随着青帮-三合会联合在全国的统治地位的确立，一种新思想开始在我们的公民和同伙中迅速生根发芽。清王朝根本一文不值，懦弱的卖国贼溥仪应被废黜和抛弃，但帝制思想在中国并没有完全消亡，因为中华历代君王的子嗣仍在存在帝国中！\n\n在长春市南部的一个小村庄里，延恩侯朱煜勋一直过着流亡生活，他在多年前被清政府所驱逐，他的爵位也被剥夺。但人们却坚信他是明朝的真正继承人。同样遭遇的还有在曲阜的衍圣公孔令贻，她被软禁于家中，但人们也坚信着他同伟大先祖孔子和宋公有着血脉关系，体内流淌着商朝皇室的血液。汉高祖刘邦的直系亲属刘少奇与周公的后人周恩来虽然已经倒向异端工团思想，哪怕是他们强硬的不同意，只要我们的小弟多去拜访他们的家人，他们在我们强大的实力面前总将屈服的。\n\n无论如何，龙头[LEC.getleader]现在正统治着中国人民，而不是软弱的小兔崽子溥仪。我们可以邀请其中一位皇室贵族加入我们的政府，并授予他在龙椅上的一席之地。延恩侯将被尊为“洪武二世”，而衍圣公将被尊为“文宣王”，刘少奇将被尊为“光武帝二世”，周恩来将被尊称为“文宪王”。他们都将作为我们和谐的犯罪社会的头面人物，最终在青帮-三合会和中国传统仪式的融合中被加冕。或者，我们可以悄悄地掩盖任何有关他们的下落的线索，并简简单单地把这个古老的皇室家族丢回尘封的历史。"
+ legcities.101.d:0 "随着帮会联合在全国的统治地位的确立，一种新思想开始在我们的公民和同伙中迅速生根发芽。清王朝根本一文不值，懦弱的卖国贼溥仪应被废黜和抛弃，但帝制思想在中国并没有完全消亡，因为中华历代君王的子嗣仍在存在帝国中！\n\n在长春市南部的一个小村庄里，延恩侯朱煜勋一直过着流亡生活，他在多年前被清政府所驱逐，他的爵位也被剥夺。但人们却坚信他是明朝的真正继承人。同样遭遇的还有在曲阜的衍圣公孔令贻，她被软禁于家中，但人们也坚信着他同伟大先祖孔子和宋公有着血脉关系，体内流淌着商朝皇室的血液。汉高祖刘邦的直系亲属刘少奇与周公的后人周恩来虽然已经倒向异端工团思想，哪怕是他们强硬的不同意，只要我们的小弟多去拜访他们的家人，他们在我们强大的实力面前总将屈服的。\n\n无论如何，龙头[LEC.getleader]现在正统治着中国人民，而不是软弱的小兔崽子溥仪。我们可以邀请其中一位皇室贵族加入我们的政府，并授予他在龙椅上的一席之地。延恩侯将被尊为“洪武二世”，而衍圣公将被尊为“文宣王”。他们都将作为我们和谐的犯罪社会的头面人物，最终在中国传统仪式中被加冕。或者，我们可以悄悄地掩盖任何有关他们的下落的线索，并简简单单地把这个古老的皇室家族丢回尘封的历史。"
  legcities.101.a:0 "龙头不需要假皇帝和早就完蛋的王朝充点门面！"
  legcities.101.b:0 "延恩侯万岁万万岁，大明唯一的真龙天子！"
  legcities.101.c:0 "衍圣公万岁万万岁，大商唯一的真龙天子！"
- legcities.101.e:0 "光武帝万岁万万岁，大汉唯一的真龙天子！"
- legcities.101.f:0 "文宪王万岁万万岁，大周唯一的真龙天子！"
 
  LEC_france_guangzhou:0 "取得广州地区"
  LEC_expand_operation_guangzhou:0 "在[592.GetName]扩展黑帮活动"
