--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -74,6 +74,9 @@
  SHC_she_hui_zhu_yi_yu_wen:0 "社会主义余温"
  SHC_di_xia_she_hui_de_fan_pu:0 "犯罪组织的反扑"
  SHC_wan_gu_de_jiu_shi_li:0 "顽固的旧势力"
+ SHC_attack_LEP_idea:0 "消灭宁系军阀"
+ SHC_attack_SQI_idea:0 "消灭鲁系军阀"
+ SHC_attack_ANQ_idea:0 "消灭新皖系军阀"
 
  SHCqiehuan.1.t:0 "上海大战"
  SHCqiehuan.1.d:0 "总工会与理事会矛盾越发激化，最终双方迈过了那道和平解决的坎，工人纠察队和使馆城市的治安部队大打出手。由汪寿华、赵世炎等人组成的特别委员会指挥全上海工人切断水源和电源，向各区警署、兵工厂、电话局、火车站和驻在上海的军阀部队直鲁联军发动全面进攻。而使馆城市的援军也在源源不断的赶到上海，双方经过了两天一夜的血战，最终..."
@@ -965,11 +968,17 @@
 
  LEC_shang_hai_qi_shi_tuan_tooltip: "§Y我就观看，见有一匹白马；骑在马上的，拿着弓，并有冠冕赐给他。他便出来，胜了又要胜。§!"
 
- HUI_JI_DESC:0 "惠济良主教是一位法国罗马天主教耶稣会会士。1877年10月1日，惠济良出生于法国布列塔尼地区的埃物朗（Évran），1896年入耶稣会修道。1903年前往中国上海徐家汇，继续攻读哲学、神学。1910年6月10日祝圣为耶稣会神父，此后先后在浦东、海门等地传教，任震旦大学法语教师，以及徐家汇修院院长。1928年6月25日，罗马教廷任命惠济良为南京宗座代牧区辅理主教，10月3日，由天主教献县教区主教、耶稣会士刘钦明祝圣，天主教烟台教区主教罗汉光、天主教宁波教区主教戴安德襄礼。1931年5月13日，姚宗李主教去世，惠济良接任南京代牧区主教一职。1933年12月13日，教宗庇护十一世将南京代牧区分为南京和上海2个代牧区，惠济良留在上海，继续担任上海代牧区主教；无锡以西划给南京代牧区，主教为于斌。"
- YU_BING_DESC:0 "于斌，圣名保禄，号野声，黑龙江省海伦县人，出生于黑龙江兰西县。于家祖籍山东省昌邑县的于家莊，清朝末年，于斌的曾祖父于文成闯关东来到黑龙江。在于斌6岁时，父亲于水源去世，7岁时母亲萧氏也去世。因此于斌是由祖父母抚养长大，祖父为中医，生活并不富裕，也和其他乡村少年一样为家中放猪，但有机会进私塾接受教育。1912年，于斌11岁时，他的祖父母迁居到海伦县若瑟屯，这件事对于斌一生的影响极大。因为若瑟屯正是黑龙江省最重要的一个天主教村庄，正如河北省的东闾村、山西省的六合村和察哈尔省的西湾子一样，这一类天主教村庄绝大部分家庭都是天主教徒，宗教气氛浓郁，是各教区内年轻神父和修女的主要来源地，也是天主教会抱以厚望的发展基地。地处塞外的若瑟屯在这一类天主教村庄中资历最浅，在1902年才由法国巴黎外方传教会的神父陆恒之创建，但几年间吸引来上百户天主教徒，于斌的祖母在迁居若瑟屯后不久，就接受了天主教信仰。不久陆神父发现于斌是个可造之才，于是先后保送他进入海伦县的高等小学和黑龙江省第一师范学校就读，希望他将来能担任村里的教师。于斌在14岁那年洗礼，圣名保禄。他的号“野声”则来源于《圣经》中圣若翰洗者的旷“野”的呼“声”。\n\n1919年五四运动爆发时，于斌18岁，正在黑龙江省第一师范学校就读，他被同学们推为学生团团长，多次在街头发表演说而风靡省城。当时的黑龙江督军鲍贵卿准备逮捕他，于斌被迫辍学，返回若瑟屯避风。1920年，于斌19岁，他决定终身修道。不过因为他是家中长房唯一的男孩，祖父希望他在世俗事务上成就大事业，陆神父也劝他谨慎从事。最后由于得到祖母由氏的大力支持，于斌得以顺利进入位于吉林省城的吉林神罗修道院，先在小修道院学习拉丁文，中间到上海震旦大学预科学习法文一年即毕业，传为美谈，然后再回到吉林的大修道院学习神学。1924年时以23岁之龄被保送到罗马宗座传信大学研读哲学、神学。\n\n直到1933年，在取得了三个博士学位后，于斌离开已经居留10年的意大利罗马，圣座本想让其出任圣座大使，但他诚挚表达想回自己国家传教。他由罗马回国，回国后任中华全国公教进行会总监督。同年12月13日，教宗庇护十一世将南京代牧区分为南京和上海2个代牧区。由于斌担任南京宗座代牧区宗座代牧。\n\n1936年，由于八省内乱的硝烟日渐浓郁，南京宗座代牧区便暂时转移至上海办公，而这却给于斌带来了更大的“惊喜”..."
+ SHC_Hui_Ji_liang: "惠济良"
+ POLITICS_HUI_JI_LIANG_DESC:0 "惠济良主教是一位法国罗马天主教耶稣会会士。1877年10月1日，惠济良出生于法国布列塔尼地区的埃物朗（Évran），1896年入耶稣会修道。1903年前往中国上海徐家汇，继续攻读哲学、神学。1910年6月10日祝圣为耶稣会神父，此后先后在浦东、海门等地传教，任震旦大学法语教师，以及徐家汇修院院长。1928年6月25日，罗马教廷任命惠济良为南京宗座代牧区辅理主教，10月3日，由天主教献县教区主教、耶稣会士刘钦明祝圣，天主教烟台教区主教罗汉光、天主教宁波教区主教戴安德襄礼。1931年5月13日，姚宗李主教去世，惠济良接任南京代牧区主教一职。1933年12月13日，教宗庇护十一世将南京代牧区分为南京和上海2个代牧区，惠济良留在上海，继续担任上海代牧区主教；无锡以西划给南京代牧区，主教为于斌。"
+ SHC_yu_bing: "于斌"
+ POLITICS_YU_BING_DESC:0 "于斌，圣名保禄，号野声，黑龙江省海伦县人，出生于黑龙江兰西县。于家祖籍山东省昌邑县的于家莊，清朝末年，于斌的曾祖父于文成闯关东来到黑龙江。在于斌6岁时，父亲于水源去世，7岁时母亲萧氏也去世。因此于斌是由祖父母抚养长大，祖父为中医，生活并不富裕，也和其他乡村少年一样为家中放猪，但有机会进私塾接受教育。1912年，于斌11岁时，他的祖父母迁居到海伦县若瑟屯，这件事对于斌一生的影响极大。因为若瑟屯正是黑龙江省最重要的一个天主教村庄，正如河北省的东闾村、山西省的六合村和察哈尔省的西湾子一样，这一类天主教村庄绝大部分家庭都是天主教徒，宗教气氛浓郁，是各教区内年轻神父和修女的主要来源地，也是天主教会抱以厚望的发展基地。地处塞外的若瑟屯在这一类天主教村庄中资历最浅，在1902年才由法国巴黎外方传教会的神父陆恒之创建，但几年间吸引来上百户天主教徒，于斌的祖母在迁居若瑟屯后不久，就接受了天主教信仰。不久陆神父发现于斌是个可造之才，于是先后保送他进入海伦县的高等小学和黑龙江省第一师范学校就读，希望他将来能担任村里的教师。于斌在14岁那年洗礼，圣名保禄。他的号“野声”则来源于《圣经》中圣若翰洗者的旷“野”的呼“声”。\n\n1919年五四运动爆发时，于斌18岁，正在黑龙江省第一师范学校就读，他被同学们推为学生团团长，多次在街头发表演说而风靡省城。当时的黑龙江督军鲍贵卿准备逮捕他，于斌被迫辍学，返回若瑟屯避风。1920年，于斌19岁，他决定终身修道。不过因为他是家中长房唯一的男孩，祖父希望他在世俗事务上成就大事业，陆神父也劝他谨慎从事。最后由于得到祖母由氏的大力支持，于斌得以顺利进入位于吉林省城的吉林神罗修道院，先在小修道院学习拉丁文，中间到上海震旦大学预科学习法文一年即毕业，传为美谈，然后再回到吉林的大修道院学习神学。1924年时以23岁之龄被保送到罗马宗座传信大学研读哲学、神学。\n\n直到1933年，在取得了三个博士学位后，于斌离开已经居留10年的意大利罗马，圣座本想让其出任圣座大使，但他诚挚表达想回自己国家传教。他由罗马回国，回国后任中华全国公教进行会总监督。同年12月13日，教宗庇护十一世将南京代牧区分为南京和上海2个代牧区。由于斌担任南京宗座代牧区宗座代牧。\n\n1936年，由于八省内乱的硝烟日渐浓郁，南京宗座代牧区便暂时转移至上海办公，而这却给于斌带来了更大的“惊喜”..."
+ SHC_Morris_Abraham_Cohen: "莫里斯·亚伯拉罕·科恩"
+ POLITICS_SHC_Morris_Abraham_Cohen_DESC:0 "§Y陆军将领介绍\n生于：§!§g1887年8月3日；俄罗斯帝国、俄属波兰马佐夫舍姆瓦瓦\n§Y军旅生涯：§!§g莫里斯·亚伯拉罕·科恩，绰号“双枪马坤”，是一名英国和加拿大冒险家，犹太人，孙中山的侍从官，同时也是名誉国民革命军少将。第一次世界大战期间，科恩加入加拿大铁路军团到欧洲作战，部分工作涉及监督中国劳工。他还参加西线的一些激烈战斗，特别是在第三次伊普尔战役期间。战后，他回到加拿大。但因经济下滑，房地产繁荣的日子已经过去。科恩寻找新的出路，于1922年前往中国，谈一笔铁路交易。科恩在上海下船后，去见了乔治·索科尔斯基, 这位纽约出生的记者曾为孙中山的英文上海时报工作。索科尔斯基为他安排了与孙先生的英文秘书陈友仁的见面。科恩被录用，并很快住进上海法租界莫里哀路29号孙中山家中。在上海和广州，科恩训练孙中山的小型武装部队进行拳击和射击，告诉人们他是孙中山的副官和代理上校。对于科恩来说幸运的是，虽然他的中文水平不佳 — 至多能说洋泾浜广东话 —但并不是一个问题，因为孙中山、他的妻子宋庆龄，以及他们的许多同事都接受过西方教育，能说英语。科恩的同事们开始称他为马坤，他很快就成为了孙中山的主要保护者之一。在一次战斗中他被子弹擦伤，此后科恩开始携带第二把枪。西方侨民对孙中山的持枪保护者很感兴趣，称他为“双枪科恩”。\n\n§Y备注：科恩尚未离开中国前就和国民党内的左派势力与工团党颇有来往，反而与右派的胡汉民、蒋介石的来往颇少。§!§!"
 
  SHC_social_conservative_party_new:0 "上海教区"
  SHC_social_conservative_party_new_long:0 "上海教区(Dioecesis Sciamhaevensis)\n§g上海教区分为47个堂区，分属5个总铎区及佘山修院等，在惠济良主教的主持下捍卫着主的荣耀。§!"
+ SHC_social_conservative_party_JD:0 "国民党"
+ SHC_social_conservative_party_JD_long:0 "国民党(Kuomintang)\n§g国民党在[SHC.GetNameDef]的领导下接受了天主教伸来的救赎之手，在原本的三民主义基底上又加上了一层天主教的色彩，如今的党员在宣布自己效忠于党与三民主义的同时也需要受洗成为一位公教徒，又出于开放包容的态度，新教徒也被允许入党。§!"
  SHC_authoritarian_democrat_party_new:0 "南京总教区"
  SHC_authoritarian_democrat_party_new_long:0 "南京总教区(Archidioecesis Nanchinensis)\n§g南京宗教区作为如今中国第一个施行圣统制，建立教区的地方，毫无疑问是中国天主教的发展中心。原本略小的圣母无染原罪始胎堂的扩建工程也提上了日程，主的传道士们将在中华完成他们的布道工作。§!"
 
@@ -993,7 +1002,7 @@
  LEC_jie_shou_pa_pa_de_jiao_hui:0 "传颂主的教诲"
  LEC_jie_shou_pa_pa_de_jiao_hui_desc:0 "你说『主没有呼召你』，我想你该说『你没仔细听主的呼召！』把你的耳朵贴近圣经，听祂吩咐你去，将罪人从罪恶的火湖中拉出来；把你的耳朵贴近受压痛苦的人心，听听他们可怜的呼求；去站在地狱的大门，听听落入阴间的人恳切的哭求声，乞求你回到他们父家，告诉他们的兄弟姊妹、仆人与主人，免得他们也来到这痛苦的地方；接着你看着基督的荣面─你曾佯装要顺服的权柄─告诉祂，你是否愿意全心全意、不顾艰难地加入行列，向世人传扬主的慈爱。" 
  LEC_chong_zu_shang_hai_chen:0 "重组上海城"
- LEC_chong_zu_shang_hai_chen_desc:0 "使馆城市理事会时期的纽约存在许多不合理的架构和法律法规，而新纽约将摒弃这些不合教义的部分。我们将依照天主教教义，建立一个崭新的纽约城。正如《圣经》所言：“你们要成为新人，脱去从前行为上的旧人，这旧人是因迷惑的私欲渐渐变坏的”（以弗所书 4:22-24），我们也要在新纽约中焕然一新，按照主的教导，建立一个公义、爱与和谐的社会。" 
+ LEC_chong_zu_shang_hai_chen_desc:0 "使馆城市理事会时期的上海存在许多不合理的架构和法律法规，而新上海将摒弃这些不合教义的部分。我们将依照天主教教义，建立一个崭新的上海城。正如《圣经》所言：“你们要成为新人，脱去从前行为上的旧人，这旧人是因迷惑的私欲渐渐变坏的”（以弗所书 4:22-24），我们也要在新上海中焕然一新，按照主的教导，建立一个公义、爱与和谐的社会。" 
  LEC_pai_chu_yi_duan:0 "摒弃异教"
  LEC_pai_chu_yi_duan_desc:0 "“你们务要出去离开他们，与他们分别，不要沾不洁净的物，我就收纳你们”（哥林多后书 6:17）。旧上海是一个多信仰的城市，在理事会时期虽然我们对那些新教徒、穆斯林、佛教徒有些不满，但我们无法要求理事会将这些异教徒赶出上海。然而，现在情况不同了，我们已经稳固了在上海的政权。我们治下的上海将全心全意侍奉我们的主，这些异教徒最好自行离开。" 
  LEC_zu_fu_qing_fen_zhi_ren:0 "祝福勤奋之人"
@@ -1048,9 +1057,6 @@
  lecjidu.7.a:0 "对他们视而不见"
  lecjidu.7.b:0 "给他们一些政府席位吧"
  lecjidu.7.c:0 "新教徒，滚出去！"
- lecjidu.8.t:0 "中华民国"
- lecjidu.8.d:0 "令人难以致信的是我们竟然真的统一了中国，天主的子民光复了这神圣的共和国，我们将以圣日新的遗愿重建全中国。"
- lecjidu.8.a:0 "该死，我要哭出来了"
  lecjidu.9.t:0 "白马修道院"
  lecjidu.9.d:0 "白马寺位于河南省洛阳老城以东21公里处，北依邙山，南临洛河，创建于东汉永平十一年，是佛教传入中国后兴建的第一座寺院，白马寺建立之后，中国“僧院”便泛称为“寺”，白马寺也因此被认为是中国佛教的发源地，有中国佛教的“祖庭”和“释源”之称。\n\n不过这已经是旧历史了，基督徒的军队攻占洛阳后，[SHC.GetNameDef]主教干的第一件事就是宣布将这座悠久历史的寺庙改建为修道院。从今往后白马寺不再供奉佛祖，而会成为基督最忠诚的修道院。在经过圣座的同意之后洛阳教区的主教座堂将迁移至白马修道院，并且将洛阳教区升格为河南教省的总教区，原本的开封总教区降格为教区。开封总教区的原总主教谭维新主教担任洛阳总教区的主教。"
  lecjidu.9.a:0 "不错，不错"
@@ -1063,6 +1069,14 @@
  Shcjidu.3.t:0 "教区升格"
  Shcjidu.3.d:0 "在大主教[SHC.GetNameDef]的带领下，我们光复了神圣的南京城。在这里诞生了第一名华人主教——罗文藻主教，因此这里对于我们有着别样的价值。而原本因为战乱而暂时搬迁至上海的南京代牧区教士团队也从重新回到了圣母无染原罪始胎堂恢复开始他们的布道工作。除了这个好消息外，我们向Papa的申请得到了同意，南京与上海被认为已经拥有了成立教区资格，如今我们将摆脱代牧区的身份，正式成为主的教区。南京将要升格为总教区，下辖海门教区、上海教区、徐州教区、苏州教区四个教区，依旧由于斌主教担任总主教一职。"
  Shcjidu.3.a:0 "amen"
+ Shcjidu.4.t:0 "双枪科恩"
+ Shcjidu.4.d:0 "中东一家酒馆里，一个年近五旬，鬓角斑白，一双灰蓝色的眼睛仍透着鹰隼般的锐利，坐在吧台前，喝着啤酒阅读着最近的报纸，在一个不起眼的角落里他发现了一些令人感兴趣的东西：在远东欧美的租界联盟使馆城市理事会破产了，远东最大的明珠上海发生了火并，在德国人的资助下天主教会控制了那里。但这些都不重要，重要的是他看到了一个名字“圣日新”，那是教会最新承认的圣人。而这个教名的拥有者是一个他非常熟悉的家伙：孙中山。这位老人留下酒钱转身离去，他明白自己的旅途要再一次回到曾经离开的那个异国他乡——中国了。\n\n这个老人名叫莫里斯·亚伯拉罕·科恩，一个犹太人；一个冒险家，他的血液因每一次身处险境而沸腾；一个被孙中山的人格魅力所吸引的家伙。他第一次知道孙中山这个名字是在加拿大，他在那里和当地华人建立了丰厚的友谊，他们邀请他加入自己的组织——同盟会，他从这里开始被三民主义和孙中山的不屈精神所吸引。直到1922年他第一次来到中国，第一次和孙中山相见，他真正的被这位革命家的精神所折服。他在中国呆了很久，他出席了孙中山的葬礼，他见证了国民革命的失败，最终他离开了这里重新踏上冒险的旅途，云游世界，直到今天，尽管他对宗教毫无兴趣，但是起码孙先生也是为基督徒。他还是选择踏上了前往上海的轮船..."
+ Shcjidu.4.a:0 "欢迎回来，离家的浪子"
+ Shcjidu.5.t:0 "世俗事务"
+ Shcjidu.5.d:0 "令人难以致信的是我们竟然真的统一了中国，天主的子民光复了这神圣的共和国，我们将以圣日新的遗愿重建全中国。但是坦白而言，我们的牧师乃至于我们的几位主教都一心一意的侍奉我主，对世俗的事务不甚了解，无法承担起如今的重任。为了不让这神圣的共和国被社会主义和封建主义玷污，我们最好和曾经的盟友国民党联手起来，毕竟他们有着极为丰厚的政治经验。我们的主保圣人——圣日新的最大政治遗产也是国民党，同他们合作是最好的选择。可供我们选择的有两位：\n\n首先是圣日新的长子孙科先生，他在国民党内颇有声望，在和我们接触后也同意与我们合作，作为孙先生的长子，我们相信他绝不会玷污我们这神圣的国度。另一位则是我们的圣方济各骑士团大团长蒋经国先生，尽管他和他的家人与新教徒们走得更近，但无论如何他也同样是主的子民，他定不会使我们的国度沾染上罪孽。我们当如何选择？"
+ Shcjidu.5.a:0 "孙科将为主代行世俗之事"
+ Shcjidu.5.b:0 "蒋经国将为主代行世俗之事"
+ Shcjidu.5.c:0 "我们将平衡好一切，主的国由我们自己守护"
 
 ###新教
  SHC_CHR: "上海总教区"
