--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -975,10 +975,12 @@
  SHC_Morris_Abraham_Cohen: "莫里斯·亚伯拉罕·科恩"
  POLITICS_SHC_Morris_Abraham_Cohen_DESC:0 "§Y陆军将领介绍\n生于：§!§g1887年8月3日；俄罗斯帝国、俄属波兰马佐夫舍姆瓦瓦\n§Y军旅生涯：§!§g莫里斯·亚伯拉罕·科恩，绰号“双枪马坤”，是一名英国和加拿大冒险家，犹太人，孙中山的侍从官，同时也是名誉国民革命军少将。第一次世界大战期间，科恩加入加拿大铁路军团到欧洲作战，部分工作涉及监督中国劳工。他还参加西线的一些激烈战斗，特别是在第三次伊普尔战役期间。战后，他回到加拿大。但因经济下滑，房地产繁荣的日子已经过去。科恩寻找新的出路，于1922年前往中国，谈一笔铁路交易。科恩在上海下船后，去见了乔治·索科尔斯基, 这位纽约出生的记者曾为孙中山的英文上海时报工作。索科尔斯基为他安排了与孙先生的英文秘书陈友仁的见面。科恩被录用，并很快住进上海法租界莫里哀路29号孙中山家中。在上海和广州，科恩训练孙中山的小型武装部队进行拳击和射击，告诉人们他是孙中山的副官和代理上校。对于科恩来说幸运的是，虽然他的中文水平不佳 — 至多能说洋泾浜广东话 —但并不是一个问题，因为孙中山、他的妻子宋庆龄，以及他们的许多同事都接受过西方教育，能说英语。科恩的同事们开始称他为马坤，他很快就成为了孙中山的主要保护者之一。在一次战斗中他被子弹擦伤，此后科恩开始携带第二把枪。西方侨民对孙中山的持枪保护者很感兴趣，称他为“双枪科恩”。\n\n§Y备注：科恩尚未离开中国前就和国民党内的左派势力与工团党颇有来往，反而与右派的胡汉民、蒋介石的来往颇少。§!§!"
 
+ SHC_syndicalist_party_JD:0 "亚洲工会兄弟会"
+ SHC_syndicalist_party_JD_long:0 "上海分会\n§g劳工牧民最核心的信念，就是天主是爱，正因为天主无条件地爱我们每一个人， 人人在祂眼中都是有独特的尊严，故此我们以此信息，去关心基层工友身心灵的需要§!"
  SHC_social_conservative_party_new:0 "上海教区"
  SHC_social_conservative_party_new_long:0 "上海教区(Dioecesis Sciamhaevensis)\n§g上海教区分为47个堂区，分属5个总铎区及佘山修院等，在惠济良主教的主持下捍卫着主的荣耀。§!"
  SHC_social_conservative_party_JD:0 "国民党"
- SHC_social_conservative_party_JD_long:0 "国民党(Kuomintang)\n§g国民党在[SHC.GetNameDef]的领导下接受了天主教伸来的救赎之手，在原本的三民主义基底上又加上了一层天主教的色彩，如今的党员在宣布自己效忠于党与三民主义的同时也需要受洗成为一位公教徒，又出于开放包容的态度，新教徒也被允许入党。§!"
+ SHC_social_conservative_party_JD_long:0 "国民党(Kuomintang)\n§g国民党在[SHC.GetLeader]的领导下接受了天主教伸来的救赎之手，在原本的三民主义基底上又加上了一层天主教的色彩，如今的党员在宣布自己效忠于党与三民主义的同时也需要受洗成为一位公教徒，又出于开放包容的态度，新教徒也被允许入党。§!"
  SHC_authoritarian_democrat_party_new:0 "南京总教区"
  SHC_authoritarian_democrat_party_new_long:0 "南京总教区(Archidioecesis Nanchinensis)\n§g南京宗教区作为如今中国第一个施行圣统制，建立教区的地方，毫无疑问是中国天主教的发展中心。原本略小的圣母无染原罪始胎堂的扩建工程也提上了日程，主的传道士们将在中华完成他们的布道工作。§!"
 
@@ -1037,10 +1039,10 @@
  lecjidu.1.a:0 "欢迎加入帝国公约！"
  lecjidu.1.b:0 "代价太大了"
  lecjidu.2.t:0 "祝圣仪式"
- lecjidu.2.d:0 "今日的教堂正中央悬挂着一张孙先生的画像，而教堂中则是人山人海，来自各地的信徒汇聚于此，他们将要见证孙中山先生的封圣仪式。仪式由[SHC.GetNameDef]主教主持，他宣读了来自梵蒂冈的诏书，宣布孙中山正式被册封为圣人。由于其身份的特殊性，经过孙先生的遗孀宋庆龄女士的赞同之后，孙先生生前穿着的一件常服被作为圣遗物带入教堂，供信徒瞻仰。在[SHC.GetNameDef]主教的布道中，他讲述了孙先生对于耶稣基督的虔诚与他的拳拳爱国之心，闻者或感其忠心，或痛心于如今中华分裂之景象，纷纷落泪。数百双泪眼婆娑的眼睛直视着教堂中央那幅孙先生的画像，而画中的孙先生仿佛也感受到了教堂中弥漫着的悲伤气息，竟从双眼中落下一行清泪。见证这一刻的信徒们无不高呼着孙先生显灵。"
+ lecjidu.2.d:0 "今日的教堂正中央悬挂着一张孙先生的画像，而教堂中则是人山人海，来自各地的信徒汇聚于此，他们将要见证孙中山先生的封圣仪式。仪式由[SHC.GetLeader]主教主持，他宣读了来自梵蒂冈的诏书，宣布孙中山正式被册封为圣人。由于其身份的特殊性，经过孙先生的遗孀宋庆龄女士的赞同之后，孙先生生前穿着的一件常服被作为圣遗物带入教堂，供信徒瞻仰。在[SHC.GetLeader]主教的布道中，他讲述了孙先生对于耶稣基督的虔诚与他的拳拳爱国之心，闻者或感其忠心，或痛心于如今中华分裂之景象，纷纷落泪。数百双泪眼婆娑的眼睛直视着教堂中央那幅孙先生的画像，而画中的孙先生仿佛也感受到了教堂中弥漫着的悲伤气息，竟从双眼中落下一行清泪。见证这一刻的信徒们无不高呼着孙先生显灵。"
  lecjidu.2.a:0 "愿耶稣与孙先生同在"
  lecjidu.3.t:0 "名誉大团长"
- lecjidu.3.d:0 "在我们设立圣方济各骑士团，追封了为国玉碎的国民革命军总司令蒋中正先生为首任大团长之后，[SHC.GetNameDef]主教便写信给了蒋中正先生的独子蒋经国先生。信中阐述了主教对于其父蒋中正先生的敬仰之情，和对国民革命失败的惋惜，在信的最后，[SHC.GetNameDef]主教表示希望由蒋经国先生担任圣方济各骑士团的名誉大团长。\n\n在信寄出去之后仿佛石沉大海一般，长时间没有回应，但是最终直到昨日，我们终于收到了蒋经国先生的回信。信中经国先生表示了对主教的感谢，以及自己愿意被册封为圣方济各骑士团的名誉大团长，但是由于国内形势原因，他无法来到上海受封。"
+ lecjidu.3.d:0 "在我们设立圣方济各骑士团，追封了为国玉碎的国民革命军总司令蒋中正先生为首任大团长之后，[SHC.GetLeader]主教便写信给了蒋中正先生的独子蒋经国先生。信中阐述了主教对于其父蒋中正先生的敬仰之情，和对国民革命失败的惋惜，在信的最后，[SHC.GetLeader]主教表示希望由蒋经国先生担任圣方济各骑士团的名誉大团长。\n\n在信寄出去之后仿佛石沉大海一般，长时间没有回应，但是最终直到昨日，我们终于收到了蒋经国先生的回信。信中经国先生表示了对主教的感谢，以及自己愿意被册封为圣方济各骑士团的名誉大团长，但是由于国内形势原因，他无法来到上海受封。"
  lecjidu.3.a:0 "无论如何蒋经国先生都是我们的大团长"
  lecjidu.4.t:0 "我们的领导者"
  lecjidu.4.d:0 "出乎所有人预料的是我们真的在上海火并中豪取了胜利，迷失的上海城回到了主的怀抱。而当我们将要开始重建上海时，我们面临着一个尴尬的问题，在上海目前有两位分区主教。因为八省战火而撤离到上海的南京宗座代牧区主教于斌很难想象在短短的几个月内上海居然发生了这么大的巨变。尽管按照规范来说上海特别市的政权当然应该由上海宗座代牧区主宰，而南京代牧区和上海代牧区事实上也是平等的，但是南京的政治地位无论如何也远高于上海。如果未来教宗宣布在中国建立圣统制，被晋升为总教区的一定是南京而不是上海。况且相对于中国人身份的于斌主教来说，由身为法国人的惠济良主教担任上海特别市临时市长无疑是尴尬的。那么我们究竟要选择谁来主宰未来的上海呢？"
@@ -1050,7 +1052,7 @@
  lecjidu.5.d:0 "夜店是撒旦控制的世界的一部分，它们的目的是让自己屈服于罪恶的欲望。保罗在以弗所书4:17-24中对基督徒说话时谈到世俗行为的问题，“所以我告诉你们，并在主里坚持，你们不可再像外邦人那样生活，他们的想法。他们的悟性昏暗，与神的生命隔绝，因为他们的心刚硬而无知。失去了所有的敏感，他们把自己交给了肉欲，以致沉迷于各种不净，不断地贪求更多。然而，你并不是这样认识基督的。你肯定听说过他，并按照耶稣里的真理在他身上受教。关于你从前的生活方式，你被教导要脱去你的旧自我，这个旧自我正被它欺骗的欲望所腐蚀；在你的思想态度上被更新；并穿上新的自我，被创造成在真正的公义和圣洁中与上帝相似。保罗在这里描述了那些排斥神，放纵肉体，贪心行各样污秽的人。显然，上帝不希望我们如此轻易地、故意地把自己交给罪。\n\n上海是一个繁华的大都市，有数不尽的夜总会，四处充满了淫靡的气息。为了挽救上海市民，为了将这些不道德之物驱逐出去，我们将禁止并拆除上海的每一个夜总会。"
  lecjidu.5.a:0 "愿上帝保佑"
  lecjidu.6.t:0 "益世广播电台"
- lecjidu.6.d:0 "《益世报》是一家隶属于天主教会的报纸，由比利时籍神父雷鸣远于1915年10月10日在天津创办。《益世报》内容并不拘泥于宗教，涉及范围广泛，长期持反日爱国之立场，是新文化运动时期京津地区的重要报纸。在五四运动中，《益世报》甚至是五四运动中第一家被查封的报纸，后来在于斌主教带领下，逐步形成天津、北平、南京、上海、西安、重庆的《益世报》网。\n\n而随着时代的发展，纸质媒体终究有一天会被淘汰，尽管现在这样的趋势还不明显，但是高瞻远瞩的[SHC.GetNameDef]主教决定创办益世广播电台，原《益世报》社长杨慕时任台长，同样的除了必要的传道工作之外，我们也还会播出新闻、评论、科教、戏曲及音乐节目。"
+ lecjidu.6.d:0 "《益世报》是一家隶属于天主教会的报纸，由比利时籍神父雷鸣远于1915年10月10日在天津创办。《益世报》内容并不拘泥于宗教，涉及范围广泛，长期持反日爱国之立场，是新文化运动时期京津地区的重要报纸。在五四运动中，《益世报》甚至是五四运动中第一家被查封的报纸，后来在于斌主教带领下，逐步形成天津、北平、南京、上海、西安、重庆的《益世报》网。\n\n而随着时代的发展，纸质媒体终究有一天会被淘汰，尽管现在这样的趋势还不明显，但是高瞻远瞩的[SHC.GetLeader]主教决定创办益世广播电台，原《益世报》社长杨慕时任台长，同样的除了必要的传道工作之外，我们也还会播出新闻、评论、科教、戏曲及音乐节目。"
  lecjidu.6.a:0 "呼号:XPBK"
  lecjidu.7.t:0 "对新教的态度"
  lecjidu.7.d:0 "从我们开始排除异教的存在以来，同属耶稣基督赐福的新教徒的地位就显得尤为尴尬。上海有着许多新教派别，如江长川牧师在上海昆山路景林堂传播卫斯理宗，丁光训家族传播着圣公宗；又比如1912年成立于上海的基督教青年会，他们的一位干事李储文被怀疑与周恩来麾下中央特科来往密切；或是以刚刚从美国毕业返回的吴贻芳女士的浸信会，他们在中国的传教历史可以追述至1836...\n\n这些五花八门的新教信仰，散布在上海各地，尽管我们可以向对待异教一般将他们驱逐出去，但是梵蒂冈对于这些新教徒一直是模棱两可的态度...况且无论如何我们都信仰耶稣基督。"
@@ -1058,16 +1060,16 @@
  lecjidu.7.b:0 "给他们一些政府席位吧"
  lecjidu.7.c:0 "新教徒，滚出去！"
  lecjidu.9.t:0 "白马修道院"
- lecjidu.9.d:0 "白马寺位于河南省洛阳老城以东21公里处，北依邙山，南临洛河，创建于东汉永平十一年，是佛教传入中国后兴建的第一座寺院，白马寺建立之后，中国“僧院”便泛称为“寺”，白马寺也因此被认为是中国佛教的发源地，有中国佛教的“祖庭”和“释源”之称。\n\n不过这已经是旧历史了，基督徒的军队攻占洛阳后，[SHC.GetNameDef]主教干的第一件事就是宣布将这座悠久历史的寺庙改建为修道院。从今往后白马寺不再供奉佛祖，而会成为基督最忠诚的修道院。在经过圣座的同意之后洛阳教区的主教座堂将迁移至白马修道院，并且将洛阳教区升格为河南教省的总教区，原本的开封总教区降格为教区。开封总教区的原总主教谭维新主教担任洛阳总教区的主教。"
+ lecjidu.9.d:0 "白马寺位于河南省洛阳老城以东21公里处，北依邙山，南临洛河，创建于东汉永平十一年，是佛教传入中国后兴建的第一座寺院，白马寺建立之后，中国“僧院”便泛称为“寺”，白马寺也因此被认为是中国佛教的发源地，有中国佛教的“祖庭”和“释源”之称。\n\n不过这已经是旧历史了，基督徒的军队攻占洛阳后，[SHC.GetLeader]主教干的第一件事就是宣布将这座悠久历史的寺庙改建为修道院。从今往后白马寺不再供奉佛祖，而会成为基督最忠诚的修道院。在经过圣座的同意之后洛阳教区的主教座堂将迁移至白马修道院，并且将洛阳教区升格为河南教省的总教区，原本的开封总教区降格为教区。开封总教区的原总主教谭维新主教担任洛阳总教区的主教。"
  lecjidu.9.a:0 "不错，不错"
  Shcjidu.1.t:0 "震旦女子文理学院"
- Shcjidu.1.d:0 "长期以来我们的教育都只顾及到了那些男性教友们，这是一件不对的事情，上帝平等的爱着他的所有子民。正如【哥林多前书11:11】然而照主的安排，女也不是无男，男也不是无女。因为女人原是由男人而出，男人也是由女人而出，但万有都是出乎神。为了实现女性教育的突破，[SHC.GetNameDef]主教委托美国圣心修女会主办，创立震旦女子文理学院，挂名在由法国耶稣会开办的震旦大学之下，校长和常务校董也由震旦大学的胡文耀与才尔孟兼任，但在财政、行政中均完全独立。教学使用英文而非法文。震旦女子文理学院下设中文、英文、教育、经济、社会、化学、家政七系。"
+ Shcjidu.1.d:0 "长期以来我们的教育都只顾及到了那些男性教友们，这是一件不对的事情，上帝平等的爱着他的所有子民。正如【哥林多前书11:11】然而照主的安排，女也不是无男，男也不是无女。因为女人原是由男人而出，男人也是由女人而出，但万有都是出乎神。为了实现女性教育的突破，[SHC.GetLeader]主教委托美国圣心修女会主办，创立震旦女子文理学院，挂名在由法国耶稣会开办的震旦大学之下，校长和常务校董也由震旦大学的胡文耀与才尔孟兼任，但在财政、行政中均完全独立。教学使用英文而非法文。震旦女子文理学院下设中文、英文、教育、经济、社会、化学、家政七系。"
  Shcjidu.1.a:0 "第一所天主教会女子大学"
  Shcjidu.2.t:0 "资助圣言会"
  Shcjidu.2.d:0 "1875年，德国人杨生（A.Jansen，1837-1909）于荷兰创立圣言会（Divine Word Missionaries），该会名字取自《若望福音》第一章：“圣言起初就有”。该会注重个人的默观和灵修，也注重普世宣教的工作。该会有五大使命：1，聆听神的圣言。2，用个人与群体生活，用以传道见证基督福音，宣讲圣言信息。3，促进地区教会对传教的认知，鼓励平信徒参与天国的建造。4，与地区教会合作，共同传扬福音。5，关爱贫穷和受欺压者。1879年3月2日，毕业于斯太尔修道院并祝圣为神父的安治泰（Johann Baptist Anzer)和福若瑟（Josef Freinademetz）成为该会的首批传教士。同年4月20日，他们到达香港学习为期一年的中文和传教课程，之后开始了二人及该会在中国的宣教之旅。\n\n他们如今主要在山东一代活跃，兖州教区、青岛教区、阳谷教区、曹州教区和沂州教区已经拥有20万教友。还建立信阳代牧区等一系列其他牧区，向中国内陆传道。但是如今，伴随着中国大地上的战火，一贯道等中国民间宗教的活跃，尤其他们的天师张天然同样身处山东，圣言会如今的日子就有些不好过了。虽然他们背靠着徳属东亚但远水救不了近火。而我们能做的就是以我们国际贸易区的身份，向他们尽可能多的给予支持了。"
  Shcjidu.2.a:0 "amen"
  Shcjidu.3.t:0 "教区升格"
- Shcjidu.3.d:0 "在大主教[SHC.GetNameDef]的带领下，我们光复了神圣的南京城。在这里诞生了第一名华人主教——罗文藻主教，因此这里对于我们有着别样的价值。而原本因为战乱而暂时搬迁至上海的南京代牧区教士团队也从重新回到了圣母无染原罪始胎堂恢复开始他们的布道工作。除了这个好消息外，我们向Papa的申请得到了同意，南京与上海被认为已经拥有了成立教区资格，如今我们将摆脱代牧区的身份，正式成为主的教区。南京将要升格为总教区，下辖海门教区、上海教区、徐州教区、苏州教区四个教区，依旧由于斌主教担任总主教一职。"
+ Shcjidu.3.d:0 "在大主教[SHC.GetLeader]的带领下，我们光复了神圣的南京城。在这里诞生了第一名华人主教——罗文藻主教，因此这里对于我们有着别样的价值。而原本因为战乱而暂时搬迁至上海的南京代牧区教士团队也从重新回到了圣母无染原罪始胎堂恢复开始他们的布道工作。除了这个好消息外，我们向Papa的申请得到了同意，南京与上海被认为已经拥有了成立教区资格，如今我们将摆脱代牧区的身份，正式成为主的教区。南京将要升格为总教区，下辖海门教区、上海教区、徐州教区、苏州教区四个教区，依旧由于斌主教担任总主教一职。"
  Shcjidu.3.a:0 "amen"
  Shcjidu.4.t:0 "双枪科恩"
  Shcjidu.4.d:0 "中东一家酒馆里，一个年近五旬，鬓角斑白，一双灰蓝色的眼睛仍透着鹰隼般的锐利，坐在吧台前，喝着啤酒阅读着最近的报纸，在一个不起眼的角落里他发现了一些令人感兴趣的东西：在远东欧美的租界联盟使馆城市理事会破产了，远东最大的明珠上海发生了火并，在德国人的资助下天主教会控制了那里。但这些都不重要，重要的是他看到了一个名字“圣日新”，那是教会最新承认的圣人。而这个教名的拥有者是一个他非常熟悉的家伙：孙中山。这位老人留下酒钱转身离去，他明白自己的旅途要再一次回到曾经离开的那个异国他乡——中国了。\n\n这个老人名叫莫里斯·亚伯拉罕·科恩，一个犹太人；一个冒险家，他的血液因每一次身处险境而沸腾；一个被孙中山的人格魅力所吸引的家伙。他第一次知道孙中山这个名字是在加拿大，他在那里和当地华人建立了丰厚的友谊，他们邀请他加入自己的组织——同盟会，他从这里开始被三民主义和孙中山的不屈精神所吸引。直到1922年他第一次来到中国，第一次和孙中山相见，他真正的被这位革命家的精神所折服。他在中国呆了很久，他出席了孙中山的葬礼，他见证了国民革命的失败，最终他离开了这里重新踏上冒险的旅途，云游世界，直到今天，尽管他对宗教毫无兴趣，但是起码孙先生也是为基督徒。他还是选择踏上了前往上海的轮船..."
@@ -1077,6 +1079,9 @@
  Shcjidu.5.a:0 "孙科将为主代行世俗之事"
  Shcjidu.5.b:0 "蒋经国将为主代行世俗之事"
  Shcjidu.5.c:0 "我们将平衡好一切，主的国由我们自己守护"
+ Shcjidu.6.t:0 "向梵蒂冈宣战"
+ Shcjidu.6.d:0 "在我们未参与的情况下，枢机主教竟然选举了一位严重背叛天主教价值观的教宗，他胆敢如此谄媚于社会主义国家，这令全世界的天主教徒们感到了莫大的背叛。曾去我们无可奈何的接受了这一事实，但是如今我们严肃的拒绝这一选择，我们要求梵蒂冈重新选举一位真正适合成为主的代言者的教宗，我们绝不承认这该死的伪教宗，他的存在只会分裂我们的信仰，他的存在本身就是对我们信仰的玷污！"
+ Shcjidu.6.a:0 "他们必须为之忏悔！"
 
 ###新教
  SHC_CHR: "上海总教区"
