--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -963,8 +963,13 @@
  LEC_TZ_T_ADJ: "中华民国"
  LEC_TZ_T_DEF: "中华民国"
 
- LEC_hui_ji_liang_hog: "惠济良"
  LEC_yu_bing_hog: "于斌"
+ LEC_zhou_ji_si_sec: "周济世"
+ LEC_zhu_zhi_yao_eco: "朱志尧"
+ LEC_zhang_xiu_ya_sec: "张秀亚"
+ LEC_hui_ji_liang_hog: "惠济良"
+ LEC_lei_ming_yuan_eco: "雷鸣远"
+ LEC_Thomas_Tien_Ken_sin_for: "田耕莘"
 
  LEC_shang_hai_qi_shi_tuan_tooltip: "§Y我就观看，见有一匹白马；骑在马上的，拿着弓，并有冠冕赐给他。他便出来，胜了又要胜。§!"
 
