--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -1573,8 +1573,6 @@
  LEC_Triad_Idea_desc:0 "青帮，这个上海地下世界的巨无霸和它的控制者们在使馆城市理事会崩溃的当下接管了整座城市，街道上充斥着他们的打手。这些家伙摇身一变就成为了维护治安的良好公民、"
  LEC_Opium_Idea:0 "鸦片贸易"
  LEC_Rackets_Idea:0 "敲诈勒索"
- LEC_triad_paternal_autocrat_party:0 "上海黑帮联合"
- LEC_triad_paternal_autocrat_party_long:0 "龙头会议"
  LEC_TRIAD_POWER:0 "青帮掌权"
  LEC_TRIAD_POWER_GER:0 "青帮掌权"
  LEC_TRIAD_POWER_YUN:0 "青帮掌权"
@@ -1940,8 +1938,6 @@
  LEC_kaiserliche_sailing_desc:0 ""
  LEC_german_shanghai2:0 "徳属上海"
  LEC_german_shanghai2_desc:0 ""
- LEC_triad_ming_paternal_autocrat_party:0 "明王朝"
- LEC_triad_ming_paternal_autocrat_party_long:0 "明王朝（新义安-青帮联盟）(Ming Dynasty (Sun Yee On-Green Gang Coalition))"
  LEC_clear_evidence:0 "这将清除我市所有关于黑社会的犯罪证据。"
  LEC_more_evidence_all:0 "这将提供更多关于黑社会在我市的犯罪证据。"
  LEC_investigating_the_old_man:0 "§C这将对朱红社的财务进行公开审查§!"
@@ -2218,7 +2214,18 @@
  LEC_zhang_xiao_lin: "张啸林"
  LEC_wang_ya_qiao: "王亚樵"
 
+ LEC_triad_syndicalist_party:0 "斧头帮"
+ LEC_triad_syndicalist_party_long:0 "斧头帮(ax gang)\n§g斧头帮是在上海时，其他人对王亚樵帮会的称呼，他们随身携带一柄手斧，劈向那些胆敢欺压他们的工厂主、资本家们。而如今当王亚樵控制了全中国之后，他仍然如此称呼自己的帮会，以表示不改初衷。§!"
+ LEC_triad_radical_socialist_party:0 "铁血锄奸团"
+ LEC_triad_radical_socialist_party_long:0 "铁血锄奸团(Iron-blooded hoeing gang)\n§g1926年大革命失败后，无数有志之士流亡上海，其中一部分就投靠到了王亚樵麾下。他们组建了铁血锄奸团，在八省内配合宋庆龄、邓演达的闽赣根据地行动，暗杀了诸多帝国主义走狗。§!"
+ LEC_triad_paternal_autocrat_party:0 "上海黑帮联合"
+ LEC_triad_paternal_autocrat_party_long:0 "龙头会议"
+ LEC_triad_ming_paternal_autocrat_party:0 "明王朝"
+ LEC_triad_ming_paternal_autocrat_party_long:0 "明王朝(Ming Dynasty)"
+
  LEC_Crime_Bosses: "诸龙头联合"
+ LEC_yang_hu: "杨虎"
+ LEC_yang_hu_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1889年\n大清帝国 安徽省宁国县\n§Y派系：§!§g洪门 - 兴中山§!\n§Y军旅生涯：§!§g杨虎12岁到宁国西街魏天源药店当学徒，17岁弃店从戎，先后攻读于清军武弁学堂和两江学堂。南京将弁学堂毕业后，加入中国同盟会。辛亥革命之际，杨虎参与进攻南京。1913年二次革命之际，任黄兴的参谋，败北后流亡日本。1915年，袁世凯称帝。12月4日，杨虎双手提枪率二十余人组成敢死队，夜袭肇和军舰，发动肇和舰起义，用军舰上的大炮轰击上海制造局。12月末，护国战争爆发后，1916年，杨虎任护国军的长江下游司令，同陈其美进攻江阴炮台，但失败。1917年，孙文开始护法运动，杨虎赴广州参加，任护法军政府军事委员。1918年3月，任护法军政府参军处参军，后转任鄂军总司令。1922年任广州非常大总统府参军。同年，陈炯明发动六一六事变，杨虎负责孙中山的警卫任务。1923年4月起，历任大本营海军特派员、大本营参事、大本营海军处处长，负责处理海军事务。1924年，任北伐讨贼军第2军第1师师长。孙中山死后，杨虎同蒋介石靠近，二人拜为结义兄弟。大革命失败后，杨虎逃亡上海，重新开山头拜码头，立兴中山结交各路洪门兄弟。由于20年代开始，清洪两帮的矛盾减轻，双方可以互相加入不再除门，杨虎也由此成为青帮“通字辈”龙头。在上海洪门中对杨虎也隐隐有“上海帮”的说法。§!\n\n§Y备注：杨虎长期和上海总工会对立，双方多次发生火并，在各个帮会内也长期和王亚樵等人发生冲突。§!"
  LEC_Brilliant_Chang: "陈南"
  LEC_Brilliant_Chang_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1886年\n大清帝国 广东省\n§Y派系：§!§g无派系§!\n§Y军旅生涯：§!§g陈南，英语名Brilliant Chang，1913年自费留学伦敦，后在伯明翰经营一家中国餐馆，同时在暗地里从事毒品交易工作，他专门向那些年轻的女性兜售可卡因、海洛因。在导致一名女性弗雷达·肯普顿毒品过量死亡后，加上陈南中国人的身份引发了英国媒体界的舆论哗然，陈南被塑造为伦敦的“毒品大王”与“黄祸论”和“傅满洲”的具象化表现。1924年，陈南被英国审判入狱，随后被逐出英国，流亡到上海，他在这里加入了上海的青帮组织。并通过旧有的人脉负责将毒品从上海运销到不列颠公社。§!"
  LEC_Xudatong: "徐大统"
@@ -2230,14 +2237,6 @@
 
  POLITICS_WANG_YA_QIAO_DESC:0 "王亚樵，别名鼎，字久光，故江湖人士尊称其为九哥。在1887年2月7日生于安徽合肥磨店乡，在早年间他曾参与同盟会，在失败之后流亡上海，建立起了斧头帮，开始闯荡江湖。在上海滩内，斧头帮也一直充当着工人们的保护者，工人们向帮会缴纳会费，而当工人要罢工，要讨薪之时，王亚樵则会带领着斧头帮冲到最前线，与巡捕们大打出手，这使得他在工人中有口皆碑，而在使馆城市官僚中恶名昭彰。也因为在工人中的威望，斧头帮的情报工作是上海帮会中最出色的，他们往往掌握着最有价值的情报。在北伐战争失败后，王亚樵也由于早年间的经历他一度与国民党左派人士走得很近，而国民党右派如戴笠则曾是他的门徒。他通过上海不断的为国民党输送物资。\n\n在夺得政权之前，王亚樵就对其他帮会深感不满，他们的所作所为令人作呕。而在夺权之后，他的不满在与日俱增，尤其是对香港义安社那帮毒虫，他对这些人毫无善意可言。现在，他成功夺取了权力，他将按照自己的意愿塑造这个城市，让那些令人作呕的东西从此消失。"
 
- LEC_triad_syndicalist_party:0 "斧头帮"
- LEC_triad_syndicalist_party_long:0 "斧头帮(ax gang)\n§g斧头帮是在上海时，其他人对王亚樵帮会的称呼，他们随身携带一柄手斧，劈向那些胆敢欺压他们的工厂主、资本家们。而如今当王亚樵控制了全中国之后，他仍然如此称呼自己的帮会，以表示不改初衷。§!"
- LEC_triad_radical_socialist_party:0 "铁血锄奸团"
- LEC_triad_radical_socialist_party_long:0 "铁血锄奸团(Iron-blooded hoeing gang)\n§g1926年大革命失败后，无数有志之士流亡上海，其中一部分就投靠到了王亚樵麾下。他们组建了铁血锄奸团，在八省内配合宋庆龄、邓演达的闽赣根据地行动，暗杀了诸多帝国主义走狗。§!"
- LEC_triad_ming_social_democrat_party:0 "汉王朝"
- LEC_triad_ming_social_democrat_party_long:0 "汉王朝（义安社-青帮联盟）(Han Dynasty (Sun Yee On-Green Gang Coalition))"
- LEC_triad_ming_social_liberal_party:0 "周王朝"
- LEC_triad_ming_social_liberal_party_long:0 "周王朝（义安社-青帮联盟）(Han Dynasty (Sun Yee On-Green Gang Coalition))"
 
  LEC_new_technology_tt:0 "提升§Y£GFX_opium_texticon 鸦片贸易§!的§G利润§!"
  LEC_increase_opium_profit_2:0 "§Y£GFX_opium_texticon 鸦片利润§!增加§G2§!"
