--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -2230,6 +2230,10 @@
  LEC_Brilliant_Chang_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1886年\n大清帝国 广东省\n§Y派系：§!§g无派系§!\n§Y军旅生涯：§!§g陈南，英语名Brilliant Chang，1913年自费留学伦敦，后在伯明翰经营一家中国餐馆，同时在暗地里从事毒品交易工作，他专门向那些年轻的女性兜售可卡因、海洛因。在导致一名女性弗雷达·肯普顿毒品过量死亡后，加上陈南中国人的身份引发了英国媒体界的舆论哗然，陈南被塑造为伦敦的“毒品大王”与“黄祸论”和“傅满洲”的具象化表现。1924年，陈南被英国审判入狱，随后被逐出英国，流亡到上海，他在这里加入了上海的青帮组织。并通过旧有的人脉负责将毒品从上海运销到不列颠公社。§!"
  LEC_Xudatong: "徐大统"
  LEC_Xudatong_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1909年\n大清帝国 浙江省宁波镇海县\n§Y派系：§!§g桓社§!"
+ LEC_ye_chao_shan: "叶焯山"
+ LEC_ye_chao_shan_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n大清帝国 上海特别市\n§Y派系：§!§g桓社§!\n§Y军旅生涯：§!§g叶焯山，小名阿根，因早年在美国驻沪领事馆开汽车，外号“花旗阿根”。是青帮头子、“长江一虎”王德龄的门徒，与金廷荪是“同参兄弟”。后为杜月笙心腹。与高鑫宝、顾嘉棠、芮庆荣合称杜门“四大金刚”。§!"
+ LEC_gu_jia_tang: "顾嘉棠"
+ LEC_gu_jia_tang_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n大清帝国 上海特别市\n§Y派系：§!§g桓社§!\n§Y军旅生涯：§!§g顾嘉棠，杜月笙旗下头号打手，其四大金刚之首。早年间在上海滩做花匠，在一次赌博中被巡警逮捕，顾嘉棠不服与巡警扭打起来，在纠纷期间巡警的手枪走火击中大腿，顾嘉棠由此入狱半年，同时也因其顶撞巡警而在道上走响名声。顾嘉棠拜王德龄为老头子，青帮“通”字辈。顾嘉棠与杜月笙的认识同样相当早，早在杜月笙还在街头当小混混时二人便相识。杜月笙拜在黄金荣旗下时，顾嘉棠被黄金荣安排在杜月笙手下干事，从此顾嘉棠就跟着杜月笙身边为其鞍前马后。桓社在上海的几家负责毒品走私的企业，三鑫公司、港记公司的名义所有者和经营者便是顾嘉棠。§!"
  LEC_Heung_Chin: "向前"
  LEC_Heung_Chin_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1907年11月15日\n大清帝国 广东省惠州府陆丰县\n§Y派系：§!§g新义安§!"
  LEC_Kot_Siu_Wong: "葛肇煌"
