--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -1526,6 +1526,7 @@
  LEC_koreshige_inuzuka: "犬塚惟重"
  LEC_edward_barrett: "爱德华·巴雷特"
  LEC_german_time: "格尔曼·蒂梅"
+ LEC_Legation_Police: "上海警察局"
  LEC_william_ewart_fairbairn: "威廉·尤尔特·费尔贝恩"
  LEC_WILLIAM_FAIRBAIRN_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1885年2月28日\n联合王国 里克斯曼沃斯\n§Y军旅生涯：§L\n曾经的皇家海军与上海红灯区警官，威廉·伊瓦尔特·费尔贝恩因他在执勤时参加无数次街头械斗而得到的伤疤和组织上海骑警的特种防暴小组而闻名。费尔班被称作“危险的丹”，这是因为他不仅精通拳击、摔跤、赛法斗、柔道与功夫，还根据这些创立了自己的格斗技巧“防卫道”。根据警方记录，他参加过五百多场持械或非持械的非训练性搏斗，并且还定制了一件设计用来阻挡7.63×25毫米毛瑟子弹的防弹衣。如今他绝大多数时间都用来激励万国商团其他成员学会近身格斗术的基本技巧。"
  LEC_francis_wogan_festing: "弗朗西斯·沃根·费斯廷（菲士廷）"
@@ -1745,6 +1746,12 @@
  LEC_expand_operation_Tianjin:0 "在[609.GetName]扩展帮会活动"
  LEC_Bribe_Officals_Tianjin:0 "贿赂[609.GetName]官员"
  LEC_Establish_Tianjin_Syndicate:0 "建立[609.GetName]财团"
+ LEC_expand_operation_macau:0 "在[729.GetName]扩展帮会活动"
+ LEC_Bribe_Officals_macau:0 "贿赂[729.GetName]官员"
+ LEC_Establish_macau_Syndicate:0 "建立[729.GetName]财团"
+ LEC_expand_operation_qingdao:0 "在[744.GetName]扩展帮会活动"
+ LEC_Bribe_Officals_qingdao:0 "贿赂[744.GetName]官员"
+ LEC_Establish_qingdao_Syndicate:0 "建立[744.GetName]财团"
 
  LEC_attack_china:0 "征服[From.GetNameDef]"
  LEC_consolidate_coast:0 "巩固沿海租界"
@@ -2203,7 +2210,6 @@
  LEC_jap_kmt_help_tt:0 "§L支那本部§!会协助我们调查§R国民党§!，但不保证能成功。"
  LEC_du_kmt_help_tt:0 "§Y杜月笙§!会协助我们调查§R国民党§!，但他也希望我们能做出让步。"
 
-
  legcities.100.t:0 "幕后之人走上台前"
  legcities.100.d:0 "从上海的一城之地走出，地下世界的龙头们一步又一步的洗白了自己，从可耻的黑社会老大变成人人敬畏的一方诸侯，尽管他们仍旧没有放弃那些阴影中的事业，他们依旧在将男女当作货物出口海外，依旧垄断了走私市场的黑色利润，也依旧在贩卖鸦片、盗版香烟，上海滩的骰盅依旧摇晃个不停，他们也依旧向那些愿意出钱的军头出售军火。金钱在跳动，一切都像从前那样，但是所有人，至少是那些龙头们的亲信们知道，中国，要变天了..."
  legcities.100.a:0 "同舟共济，流传安清"
@@ -2363,16 +2369,16 @@
 
  LEC_Crime_Bosses: "诸龙头联合"
  LEC_Du_Yuesheng: "杜月笙"
- LEC_Du_Yuesheng_DESC: " "
- LEC_Du_Yuesheng_AMRY_DESC: " "
+ LEC_Du_Yuesheng_DESC: "杜月笙，本名杜镛，原名杜月生，号月笙，上海浦东人，青帮“悟”字辈。杜月笙早年丧父，由其继母和舅父养育。年少时在水果行当学徒，和当地混混玩在一起，后来出师了又单独摆摊卖水果，因以贩卖莱阳梨出了名，许多人便给他起了一个绰号叫他“莱阳梨”，在那时候他拜青帮陈世昌为老头子（陈世昌是仁社头目张镜湖的弟子），正式入了帮派。三十多岁时杜月笙结识了黄金荣，杜月笙给黄金荣当跟班，深得黄金荣的妻子林桂生欢心，加上会做人，能干事，由此步步高升，由于黄金荣固步自封，还是维持老一套帮会抢钱手法，二人渐行渐远，直到后来二人分家，闹得不欢而散。杜月笙一直想学习水浒中的宋江，常常也接济一些失落文人、政客，被人称为“当代孟尝君”和“小孟尝”。"
+ LEC_Du_Yuesheng_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1888年8月22日\n大清帝国 江苏省苏松太道松江府上海县高昌乡\n§Y派系：§!§g恒社§!\n§Y军旅生涯：§!§g杜月笙，本名杜镛，原名杜月生，号月笙，上海浦东人，青帮“悟”字辈。杜月笙早年丧父，由其继母和舅父养育。年少时在水果行当学徒，和当地混混玩在一起，后来出师了又单独摆摊卖水果，因以贩卖莱阳梨出了名，许多人便给他起了一个绰号叫他“莱阳梨”，在那时候他拜青帮陈世昌为老头子（陈世昌是仁社头目张镜湖的弟子），正式入了帮派。三十多岁时杜月笙结识了黄金荣，杜月笙给黄金荣当跟班，深得黄金荣的妻子林桂生欢心，加上会做人，能干事，由此步步高升，由于黄金荣固步自封，还是维持老一套帮会抢钱手法，二人渐行渐远，直到后来二人分家，闹得不欢而散。§!"
  LEC_Huang_Jinrong: "黄金荣"
- LEC_Huang_Jinrong_DESC: " "
- LEC_Huang_Jinrong_AMRY_DESC: " "
+ LEC_Huang_Jinrong_DESC: "黄金荣，原名黄锦镛，江苏苏州人，祖籍浙江余姚，自称青帮“通”字辈（实际上完全没拜过老头子），乳名和尚，因为脸上有几颗大麻子，外号“麻皮金荣”。法租界巡捕房探长，贩烟土起家，所收门徒甚众，原来以巡捕房人员及流氓居多，后来发展到工商业者、知识分子及其他方面。1892年，考入上海法租界老北门麦兰巡捕房当探员。1917年破案立功而升至督察长。在杜月笙背叛前是上海滩最大的帮派头目，手握黑白两道。"
+ LEC_Huang_Jinrong_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1868年12月14日\n大清帝国 江苏省苏松太道苏州府\n§Y派系：§!§g荣社§!\n§Y军旅生涯：§!§g黄金荣，原名黄锦镛，江苏苏州人，祖籍浙江余姚，自称青帮“通”字辈（实际上完全没拜过老头子），乳名和尚，因为脸上有几颗大麻子，外号“麻皮金荣”。法租界巡捕房探长，贩烟土起家，所收门徒甚众，原来以巡捕房人员及流氓居多，后来发展到工商业者、知识分子及其他方面。1892年，考入上海法租界老北门麦兰巡捕房当探员。1917年破案立功而升至督察长。在杜月笙背叛前是上海滩最大的帮派头目，手握黑白两道。§!"
  LEC_Zhang_Xiaolin: "张啸林"
- LEC_Zhang_Xiaolin_DESC: " "
- LEC_Zhang_Xiaolin_AMRY_DESC: " "
+ LEC_Zhang_Xiaolin_DESC: "张啸林，原名小林，乳名阿虎，后更名为寅，号啸林。张啸林从小就游手好闲，在街上游荡，他最初拜了杭州的一个名叫李休堂的人为老头子，为他跑腿，学习敲诈赌博。1912年，张啸林与季云卿相识随后开始在上海活跃。张小林为了在上海站稳脚跟，发展流氓势力，拜了青帮“大”字辈樊瑾丞为“老头子”，成为青帮“通”字辈成员。随后，他广收门徒，发展势力。由于身材魁梧，臂粗力大，凶狠毒辣，曾自比为奉系军阀张作霖，他的门徒也捧他为“张大帅”。"
+ LEC_Zhang_Xiaolin_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n11877年\n大清帝国 浙江省宁绍台道宁波府\n§Y派系：§!§g青帮§!\n§Y张啸林，原名小林，乳名阿虎，后更名为寅，号啸林。张啸林从小就游手好闲，在街上游荡，他最初拜了杭州的一个名叫李休堂的人为老头子，为他跑腿，学习敲诈赌博。1912年，张啸林与季云卿相识随后开始在上海活跃。张小林为了在上海站稳脚跟，发展流氓势力，拜了青帮“大”字辈樊瑾丞为“老头子”，成为青帮“通”字辈成员。随后，他广收门徒，发展势力。由于身材魁梧，臂粗力大，凶狠毒辣，曾自比为奉系军阀张作霖，他的门徒也捧他为“张大帅”。§!"
  LEC_yang_hu: "杨虎"
- LEC_yang_hu_DESC: "杨虎12岁到宁国西街魏天源药店当学徒，17岁弃店从戎，先后攻读于清军武弁学堂和两江学堂。南京将弁学堂毕业后，加入中国同盟会。辛亥革命之际，杨虎参与进攻南京。1913年二次革命之际，任黄兴的参谋，败北后流亡日本。1915年，袁世凯称帝。12月4日，杨虎双手提枪率二十余人组成敢死队，夜袭肇和军舰，发动肇和舰起义，用军舰上的大炮轰击上海制造局。12月末，护国战争爆发后，1916年，杨虎任护国军的长江下游司令，同陈其美进攻江阴炮台，但失败。1917年，孙文开始护法运动，杨虎赴广州参加，任护法军政府军事委员。1918年3月，任护法军政府参军处参军，后转任鄂军总司令。1922年任广州非常大总统府参军。同年，陈炯明发动六一六事变，杨虎负责孙中山的警卫任务。1923年4月起，历任大本营海军特派员、大本营参事、大本营海军处处长，负责处理海军事务。1924年，任北伐讨贼军第2军第1师师长。孙中山死后，杨虎同蒋介石靠近，二人拜为结义兄弟。大革命失败后，杨虎逃亡上海，重新开山头拜码头，立兴中山结交各路洪门兄弟。由于20年代开始，清洪两帮的矛盾减轻，双方可以互相加入不再除门，杨虎也由此拜了黄金荣为老头子，列为青帮“通字辈”。在上海洪门中对杨虎也隐隐有“上海帮”的说法。"
+ LEC_yang_hu_DESC: "杨虎12岁到宁国西街魏天源药店当学徒，17岁弃店从戎，先后攻读于清军武弁学堂和两江学堂。南京将弁学堂毕业后，加入中国同盟会。辛亥革命之际，杨虎参与进攻南京。1913年二次革命之际，任黄兴的参谋，败北后流亡日本。1915年，袁世凯称帝。12月4日，杨虎双手提枪率二十余人组成敢死队，夜袭肇和军舰，发动肇和舰起义，用军舰上的大炮轰击上海制造局。12月末，护国战争爆发后，1916年，杨虎任护国军的长江下游司令，同陈其美进攻江阴炮台，但失败。1917年，孙文开始护法运动，杨虎赴广州参加，任护法军政府军事委员。1918年3月，任护法军政府参军处参军，后转任鄂军总司令。1922年任广州非常大总统府参军。同年，陈炯明发动六一六事变，杨虎负责孙中山的警卫任务。1923年4月起，历任大本营海军特派员、大本营参事、大本营海军处处长，负责处理海军事务。1924年，任北伐讨贼军第2军第1师师长。孙中山死后，杨虎同蒋介石靠近，二人拜为结义兄弟。大革命失败后，杨虎逃亡上海，重新开山头拜码头，立兴中山结交各路洪门兄弟。由于20年代开始，清洪两帮的矛盾减轻，双方可以互相加入不再除门，杨虎也由此拜了张镜湖为老头子，列为青帮“通字辈”。在上海洪门中对杨虎也隐隐有“上海帮”的说法。"
  LEC_yang_hu_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1889年\n大清帝国 安徽省宁国县\n§Y派系：§!§g洪门 - 兴中山§!\n§Y军旅生涯：§!§g杨虎12岁到宁国西街魏天源药店当学徒，17岁弃店从戎，先后攻读于清军武弁学堂和两江学堂。南京将弁学堂毕业后，加入中国同盟会。辛亥革命之际，杨虎参与进攻南京。1913年二次革命之际，任黄兴的参谋，败北后流亡日本。1915年，袁世凯称帝。12月4日，杨虎双手提枪率二十余人组成敢死队，夜袭肇和军舰，发动肇和舰起义，用军舰上的大炮轰击上海制造局。12月末，护国战争爆发后，1916年，杨虎任护国军的长江下游司令，同陈其美进攻江阴炮台，但失败。1917年，孙文开始护法运动，杨虎赴广州参加，任护法军政府军事委员。1918年3月，任护法军政府参军处参军，后转任鄂军总司令。1922年任广州非常大总统府参军。同年，陈炯明发动六一六事变，杨虎负责孙中山的警卫任务。1923年4月起，历任大本营海军特派员、大本营参事、大本营海军处处长，负责处理海军事务。1924年，任北伐讨贼军第2军第1师师长。孙中山死后，杨虎同蒋介石靠近，二人拜为结义兄弟。大革命失败后，杨虎逃亡上海，重新开山头拜码头，立兴中山结交各路洪门兄弟。由于20年代开始，清洪两帮的矛盾减轻，双方可以互相加入不再除门，杨虎也由此拜了黄金荣为老头子，列为青帮“通字辈”。在上海洪门中对杨虎也隐隐有“上海帮”的说法。§!\n\n§Y备注：杨虎长期和上海总工会对立，双方多次发生火并，在各个帮会内也长期和王亚樵等人发生冲突。§!"
  LEC_Brilliant_Chang: "陈南"
  LEC_Brilliant_Chang_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1886年\n大清帝国 广东省\n§Y派系：§!§g无派系§!\n§Y军旅生涯：§!§g陈南，英语名Brilliant Chang，1913年自费留学伦敦，后在伯明翰经营一家中国餐馆，同时在暗地里从事毒品交易工作，他专门向那些年轻的女性兜售可卡因、海洛因。在导致一名女性弗雷达·肯普顿毒品过量死亡后，加上陈南中国人的身份引发了英国媒体界的舆论哗然，陈南被塑造为伦敦的“毒品大王”与“黄祸论”和“傅满洲”的具象化表现。1924年，陈南被英国审判入狱，随后被逐出英国，流亡到上海，他在这里加入了上海的青帮组织。并通过旧有的人脉负责将毒品从上海运销到不列颠公社。§!"
