--- a/localisation/KR_Yunnan_l_simp_chinese.yml
+++ b/localisation/KR_Yunnan_l_simp_chinese.yml
@@ -2214,3 +2214,8 @@
  yunyan.21.t:0 "大会圆满闭幕"
  yunyan.21.d:0 "此次民主会议圆满落幕，参会的军阀们被帝国宽厚的胸襟与民主的态度所感动，纷纷交出了手中的兵权，并宣布为帝国效力，他们大多根据属地被任命为该地的军政长官，少数功勋卓越或是才华横溢的将领则跻身兵部高层，得以在朝会上觐见陛下。"
  yunyan.21.a:0 "嗯，今天最高兴了."
+
+ YUN_tradgey_strikes_the_empire:0 "悲秋时节"
+ YUN_tradgey_strikes_the_empire_desc:0 "春秋乱战逐渐落下帷幕，我高祖却殒命于往常的烟雾幻梦之中。皇室宗亲却号称地方“刺史”要密谋篡权，破坏国家来之不易的和平，于是以维护稳定为由，竞相争夺起了权柄。若是没人继承大统，恐怕我们新近统一的帝国再度分裂也只是时间问题。"
+ YUN_end_of_da_chaos:0 "护天国之安宁"
+ YUN_end_of_da_chaos_desc:0 "历经多年军阀混战之后，我帝国依旧屹立不倒，在过去几年里，新的领导层得以确立，内部事务也处理完毕，和平安宁之感终于再度降临我国土地。无论我等君王及其宫廷将引领我们走向何方，当帝国向雄立于世界之目标大步迈进时，我国人民都将纵享天国之安乐。"
